test/syntax-errors/missing-rparen-in-fncall/missing-rparen-in-fncall.foster
main = {
  expect_i1(false);
  print_i1(__COMPILES__ { print_i32 42)} );
};
